--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     <div class="center-message">
         <strong>Chúc mừng 20-10</strong>
         <span id="centerText">
-            Ngày Phụ nữ Việt Nam<br>
+            <!-- Ngày Phụ nữ Việt Nam<br> -->
             luôn rạng rỡ, hạnh phúc và tràn đầy yêu thương!
         </span>
     </div>
@@ -519,3 +519,4 @@
 </body>
 
 </html>
+
