--- a/index.html
+++ b/index.html
@@ -333,6 +333,21 @@
         .fade-out {
             opacity: 0;
         }
+        
+        .center-message,
+        .center-message *,
+        .center-gif,
+        .popup,
+        .popup *,
+        .flower,
+        .flower * {
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            pointer-events: auto;
+        }
+        
         /* ------------------------------
         Responsive cho màn hình nhỏ
         ---------------------------------- */
@@ -554,3 +569,4 @@
 </body>
 
 </html>
+
